tests/invalid/wrong-version-type.hcdf
<?xml version="1.0"?>
<hcdf version="1.0">
  <comp name="broken">
</hcdf>
